--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,54 +1,22 @@
 {
-    "parser": "babel-eslint",
-    "root": true,
-    "extends": [
-        "plugin:react/recommended",
-        "plugin:import/warnings",
-        "plugin:jsx-a11y/strict",
-        "plugin:prettier/recommended",
-        "prettier"
-    ],
-    "settings": {
-        "react": {
-            "version": "detect"
-        }
-    },
     "env": {
         "browser": true,
-        "node": true,
-        "es6": true
+        "es2021": true
     },
-    "plugins": ["react", "react-hooks", "prettier", "jsx-a11y"],
+    "extends": [
+        "eslint:recommended",
+        "plugin:react/recommended"
+    ],
     "parserOptions": {
         "ecmaFeatures": {
             "jsx": true
         },
-        "ecmaVersion": 2016, // Allows for the parsing of modern ECMAScript features
-        "sourceType": "module" // Allows for the use of imports
+        "ecmaVersion": 12,
+        "sourceType": "module"
     },
+    "plugins": [
+        "react"
+    ],
     "rules": {
-        "react/react-in-jsx-scope": "off",
-        "react/require-default-props": 0,
-        "react-hooks/rules-of-hooks": "error",
-        "react-hooks/exhaustive-deps": "warn",
-        "prettier/prettier": "error",
-        "jsx-a11y/label-has-associated-control": [
-            "error",
-            {
-                "required": {
-                    "some": ["nesting", "id"]
-                }
-            }
-        ],
-        "jsx-a11y/label-has-for": [
-            "error",
-            {
-                "required": {
-                    "some": ["nesting", "id"]
-                }
-            }
-        ],
-        "jsx-a11y/click-events-have-key-events": "off",
-        "eslint-plugin/fixer-return:": "off"
     }
 }
